# uavcan_communicator

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  catkin_build.sh  install_libuavcan.sh  install_requirements.sh  package.xml  requirements.txt
.github/workflows/: catkin_build.yml
config/: example_params.yaml  params_inno_dynamics.yaml
docker/: Dockerfile  docker.sh
drone_communicators/: CMakeLists.txt  package.xml
drone_communicators/config/: params_inno_dynamics.yaml
drone_communicators/launch/: inno_dynamics_communicator.launch
drone_communicators/scripts/: check_cpplint.sh
drone_communicators/src/uavcan_communicator/: converters.cpp  converters.hpp  uavcan_node.cpp
launch/: example_communicator.launch  inno_dynamics_communicator.launch
msg/: RawAirData.msg
scripts/: Dockerfile  build_docker_image.sh  catkin_build.sh  compile_dsdl.sh  docker.sh  install.sh  install_libuavcan.sh  install_requirements.sh  requirements.txt  run_container.sh  run_interactive.sh
scripts/code_style/: astyle_check_all.sh  astyle_check_single_file.sh  astyle_fix_all.sh  astyle_fix_single_file.sh  astylerc  cpplint.sh
src/uavcan_communicator/: converters.cpp  converters.hpp  platform_linux.cpp  uavcan_node.cpp
uavcan_communicator/: package.xml
uavcan_communicator/scripts/: deb_pkg.sh
uavcan_communicator/src/uavcan_communicator/: converters.cpp  converters.hpp  uavcan_node.cpp
uavcan_msgs/: CMakeLists.txt  package.xml
uavcan_msgs/msg/: CircuitStatus.msg  EscStatus.msg  Fix.msg  IceFuelTankStatus.msg  IceReciprocatingStatus.msg
