<?xml version="1.0"?>
<package format="2">
  <name>drone_communicators</name>
  <version>0.0.0</version>
  <description>The drone_communicators package</description>
  <maintainer email="ponomarevda96@gmail.com">dmitry</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
