<?xml version="1.0"?>
<package format="2">
  <name>uavcan_communicator</name>
  <version>0.0.0</version>
  <description>The uavcan_communicator package</description>
  <maintainer email="ponomarevda96@gmail.com">dmitry</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>uavcan_msgs</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
