<?xml version="1.0"?>
<package format="2">
  <name>uavcan_msgs</name>
  <version>0.0.0</version>
  <description>The uavcan_msgs package</description>
  <maintainer email="ponomarevda96@gmail.com">dmitry</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <export>
  </export>
</package>
